objects/ssot__WebsitePublication__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CampaignId__c</fullName>
        <label>Campaign</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ChannelEngagementId__c</fullName>
        <label>Channel Engagement</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DigitalContentId__c</fullName>
        <label>Digital Content</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Website Publication Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719819478717_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WebsitePublication_CampaignId_map_Ca_rel</label>
        <referenceTo>ssot__Campaign__dlm</referenceTo>
        <relationshipLabel>WebsitePublication_CampaignId_map_Ca_rel</relationshipLabel>
        <relationshipName>rel_1719819478717_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719820263071_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WebsitePublication_DigitalContentId__rel</label>
        <referenceTo>ssot__DigitalContent__dlm</referenceTo>
        <relationshipLabel>WebsitePublication_DigitalContentId__rel</relationshipLabel>
        <relationshipName>rel_1719820263071_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>